--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,93 @@
 * {
   box-sizing: border-box;
+  font-family: serif;
 }
 
 html {
   height: 100%;
+  text-align: center;
+  display: block;
 }
 
 body {
-  margin: 5%;
+  border: 3px solid rgb(162, 223, 231);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  padding-top: 40px;
+  position: relative;
 }
+
+.bookmark {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  position: absolute;
+  right: 20px;
+  top: -20px;
+}
+
+header {
+  border: 2px solid rgb(200, 238, 243);
+  font-family: serif;
+  font-size: 2rem;
+}
+.quiz-card {
+  display: grid;
+  width: 300px;
+  padding: 20px;
+  margin: 20px;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
+  border: 2px solid rgb(179, 240, 248);
+  border-radius: 10px;
+  background: rgb(250, 246, 246);
+}
+
+.question-title {
+  text-align: center;
+  font-size: 1.5rem;
+  padding-bottom: 20px;
+}
+.show-answer-btn {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  border: 2px solid rgb(200, 238, 243);
+  border-radius: 8px;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
+  font-size: 1.2rem;
+  margin: 20px;
+}
+
+.answers {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  text-decoration: none;
+}
+
+li {
+  text-decoration: none;
+  border: 2px solid;
+  border-radius: 5px;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding-top: 50px;
+}
+
+/*.icons {
+  margin: auto;
+  padding: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}*/
