--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 * {
   box-sizing: border-box;
-  font-family: serif;
 }
 
 html {
@@ -10,24 +9,28 @@ html {
 }
 
 body {
-  border: 3px solid rgb(162, 223, 231);
+  font-family: serif;
+  border: 3px solid rgb(31, 166, 184);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
   padding-top: 40px;
-  position: relative;
+}
+
+.scrollable {
+  overflow-y: auto;
 }
 
 .bookmark {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
   font-size: 20px;
   position: absolute;
   right: 20px;
-  top: -20px;
+  top: -10px;
+  width: 15%;
 }
 
 header {
@@ -35,12 +38,14 @@ header {
   font-size: 2rem;
 }
 .quiz-card {
+  position: relative;
   display: grid;
-  width: 300px;
+  align-items: center;
+  width: 250px;
   padding: 20px;
   margin: 20px;
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
-  border: 2px solid rgb(179, 240, 248);
+  border: 2px solid rgb(31, 166, 184);
   border-radius: 10px;
   background: rgb(250, 246, 246);
 }
@@ -54,7 +59,7 @@ header {
   display: flex;
   justify-content: center;
   padding: 10px;
-  border: 2px solid rgb(200, 238, 243);
+  border: 2px solid rgb(31, 166, 184);
   border-radius: 8px;
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
   font-size: 1.2rem;
@@ -64,29 +69,30 @@ header {
 .answers {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
   gap: 10px;
   text-decoration: none;
 }
 
 li {
-  text-decoration: none;
-  border: 2px solid;
+  list-style-type: none;
+  border: 2px solid rgb(179, 206, 209);
   border-radius: 5px;
 }
 
-footer {
+.footer {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  flex-wrap: wrap;
   gap: 20px;
-  padding-top: 50px;
+  height: 48px;
+  padding-top: 0;
+  border: 4px solid rgb(200, 238, 243);
 }
 
-/*.icons {
-  margin: auto;
-  padding: auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}*/
+.icons {
+  display: contents;
+}
+
+.icons img {
+  width: 10%;
+}
