--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @import 'base.css';
-@import 'components/header.css';
-@import 'components/bookmark.css';
-@import 'components/quiz-card.css';
-@import 'components/footer.css';
+@import 'styles/components/header.css';
+@import 'styles/components/bookmark.css';
+@import 'styles/components/quiz-card.css';
+@import 'styles/components/footer.css';
