--- a/base.css
+++ b/base.css
@@ -11,12 +11,13 @@ html {
 body {
   font-family: serif;
   background-color: rgb(225, 230, 230);
-  border: 3px solid rgb(50, 126, 138);
-  border-radius: 10px;
-  display: flex;
+  margin-top: auto;
+  height: 100vh;
+
+  /*display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 40px;
+  */
 }
 
 .scrollable {
