--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,5 @@
 @import 'styles/components/bookmark.css';
 @import 'styles/components/quiz-card.css';
 @import 'styles/components/footer.css';
+@import 'styles/components/form.css';
+@import 'styles/components/profile.css';
