--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -3,15 +3,17 @@
   justify-content: space-between;
   gap: 20px;
   height: 50px;
+  width: 100%;
   margin-top: 10px;
   border-top: 1px solid rgb(128, 167, 173);
 }
 
-.icons {
+.nav__button {
+  padding: 0;
+  background: transparent;
+  border: none;
+  width: 100%;
+}
+/* nav__button img{
   display: contents;
-  z-index: 2px;
-}
-
-.icons img {
-  width: 10%;
-}
+}*/
