--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,12 +1,25 @@
-header {
+.header__nav {
+  background-color: rgb(96, 150, 158);
   font-family: serif;
-  font-size: 2rem;
+  font-size: 1.4rem;
+  padding: 10px 20px;
+  width: 100%;
+  height: 70px;
+  z-index: 1;
 }
 
-nav {
+/*.header__nav {
   display: flex;
   justify-content: center;
-  border-bottom: 5px solid rgb(128, 167, 173);
+  border: 5px solid rgb(128, 167, 173);
+  border-width: 100%;
   height: 48px;
   width: 100%;
+}
+*/
+
+h1,
+h2 {
+  align-self: center;
+  margin-bottom: 20px;
 }
