Add JS codes but deleted them and made some other modifications

--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,4 @@
 @import 'styles/components/footer.css';
 @import 'styles/components/form.css';
 @import 'styles/components/profile.css';
+@import 'styles/components/utilities.css';
