--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -8,6 +8,10 @@
   z-index: 1;
 }
 
+.bookmarked {
+  width: 48px;
+  height: 48px;
+}
 /*.header__nav {
   display: flex;
   justify-content: center;
