Added JS files and styles

--- a/styles/components/form.css
+++ b/styles/components/form.css
@@ -41,7 +41,7 @@
   background: rgb(173, 202, 209);
 }
 
-.submit__button {
+.create__btn {
   background: rgb(218, 226, 228);
   border: 2px solid rgb(204, 233, 238);
   border-radius: 8px;
