--- a/base.css
+++ b/base.css
@@ -13,6 +13,7 @@ body {
   background-color: rgb(225, 230, 230);
   margin-top: auto;
   height: 100vh;
+  width: 100vw;
 
   /*display: flex;
   flex-direction: column;
